--- a/less/about.less
+++ b/less/about.less
@@ -49,7 +49,7 @@
           display: flex;
           flex-direction: column;
           justify-content: center;
-          align-items: space-evenly;
+          align-items: center;
           flex-wrap: wrap;
 
           & > p {
